--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(omgui VERSION 0.1.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 23)
 option(OMG_BUILD_SHARED "Build the library as shared library" ON)
 option(OMG_BUILD_EXAMPLES "Build the OMG example programs" ON)
+option(OMG_RUN_TESTS "Run the OMG unit tests" ON)
 
 if (WIN32)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
@@ -23,7 +24,7 @@ add_library(omgui ${OMG_LIBRARY_TYPE} ${HEADERS} ${SOURCES})
 target_include_directories(omgui PRIVATE src)
 
 if (MSVC)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Wall /W3 /WX")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Wall /W3 /WX /wd5045")
     if (${CMAKE_BUILD_TYPE} STREQUAL "DEBUG")
         target_compile_definitions(omgui PUBLIC DLL_EXPORT_SYMBOLS)
     endif ()
@@ -31,4 +32,8 @@ endif ()
 
 if(OMG_BUILD_EXAMPLES)
     add_subdirectory(examples)
+endif()
+
+if (OMG_RUN_TESTS)
+add_subdirectory(tests)
 endif()
